# nz-privacy-auditor

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: privacy-act-mapping.md
src/nz_privacy_auditor/: __init__.py  cli.py  report.py  scanner.py  verification.py
src/nz_privacy_auditor/detectors/: __init__.py  address.py  base.py  driver_licence.py  ird.py  maori_name.py  nhi.py  phone.py
src/nz_privacy_auditor/loaders/: __init__.py  csv.py  hf.py  parquet.py
src/nz_privacy_auditor/verifiers/: __init__.py  base.py  cache.py  gemini.py
tests/: test_address.py  test_cli.py  test_driver_licence.py  test_ird.py  test_loaders.py  test_maori_name.py  test_nhi.py  test_phone.py  test_scanner.py  test_verifiers.py
